; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/netfilter/extr_nf_conntrack_expect.c_nf_ct_expect_related_report.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/netfilter/extr_nf_conntrack_expect.c_nf_ct_expect_related_report.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nf_conntrack_expect = type { i32 }

@nf_conntrack_lock = common dso_local global i32 0, align 4
@IPEXP_NEW = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @nf_ct_expect_related_report(%struct.nf_conntrack_expect* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.nf_conntrack_expect*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.nf_conntrack_expect* %0, %struct.nf_conntrack_expect** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %9 = call i32 @spin_lock_bh(i32* @nf_conntrack_lock)
  %10 = load %struct.nf_conntrack_expect*, %struct.nf_conntrack_expect** %5, align 8
  %11 = call i32 @__nf_ct_expect_check(%struct.nf_conntrack_expect* %10)
  store i32 %11, i32* %8, align 4
  %12 = load i32, i32* %8, align 4
  %13 = icmp sle i32 %12, 0
  br i1 %13, label %14, label %15

14:                                               ; preds = %3
  br label %25

15:                                               ; preds = %3
  store i32 0, i32* %8, align 4
  %16 = load %struct.nf_conntrack_expect*, %struct.nf_conntrack_expect** %5, align 8
  %17 = call i32 @nf_ct_expect_insert(%struct.nf_conntrack_expect* %16)
  %18 = call i32 @spin_unlock_bh(i32* @nf_conntrack_lock)
  %19 = load i32, i32* @IPEXP_NEW, align 4
  %20 = load %struct.nf_conntrack_expect*, %struct.nf_conntrack_expect** %5, align 8
  %21 = load i32, i32* %6, align 4
  %22 = load i32, i32* %7, align 4
  %23 = call i32 @nf_ct_expect_event_report(i32 %19, %struct.nf_conntrack_expect* %20, i32 %21, i32 %22)
  %24 = load i32, i32* %8, align 4
  store i32 %24, i32* %4, align 4
  br label %28

25:                                               ; preds = %14
  %26 = call i32 @spin_unlock_bh(i32* @nf_conntrack_lock)
  %27 = load i32, i32* %8, align 4
  store i32 %27, i32* %4, align 4
  br label %28

28:                                               ; preds = %25, %15
  %29 = load i32, i32* %4, align 4
  ret i32 %29
}

declare dso_local i32 @spin_lock_bh(i32*) #1

declare dso_local i32 @__nf_ct_expect_check(%struct.nf_conntrack_expect*) #1

declare dso_local i32 @nf_ct_expect_insert(%struct.nf_conntrack_expect*) #1

declare dso_local i32 @spin_unlock_bh(i32*) #1

declare dso_local i32 @nf_ct_expect_event_report(i32, %struct.nf_conntrack_expect*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
